# ideal-drift-calculator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
analysis/: figures.py
config/: params.py
control/: _numerics.py  corrector.py  drift_sequence.py  equilibria.py  stability.py  stability_monitor.py  tire.py
docs/: REPORT.md
estimation/: rls.py  ukf.py
experiments/: estimation_eval.py  learning_gain.py  robustness.py  torque_vectoring.py
hmi/: display.py
intent/: trajectory.py
interactive/: drive.py
learning/: tire_residual.py
realtime/: loop.py
scenarios/: drift_entry_exit.py  too_much_throttle.py
sim/: sensors.py  vehicle_model.py
tests/: test_drift_sequence.py  test_learning.py  test_numerics.py  test_robustness.py  test_scenario.py  test_signs_and_equilibria.py  test_stability.py  test_tire.py  test_torque_vectoring.py  test_ukf.py
web/: build.py  headless_probe.py  main.py
